--- a/public/index.html
+++ b/public/index.html
@@ -40,8 +40,6 @@
             padding: 15px;
             text-align: center;
             font-size: 1.5em;
-            border-top-left-radius: 10px;
-            border-top-right-radius: 10px;
         }
 
         .messages {
@@ -50,7 +48,6 @@
             max-height: 300px;
             overflow-y: auto;
             background-color: #f9f9f9;
-            border-top: 1px solid #dedede;
         }
 
         .messages p {
@@ -59,9 +56,6 @@
             border-radius: 5px;
             margin: 5px 0;
             word-wrap: break-word;
-            max-width: 100%;
-            font-size: 0.9em;
-            color: #333;
         }
 
         .input-container {
@@ -77,8 +71,6 @@
             border: 1px solid #ccc;
             border-radius: 5px;
             margin-right: 10px;
-            outline: none;
-            font-size: 0.9em;
         }
 
         button {
@@ -88,9 +80,6 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            font-weight: bold;
-            font-size: 0.9em;
-            transition: background-color 0.3s ease;
         }
 
         button:hover {
@@ -102,18 +91,15 @@
 <body>
     <div class="chat-container">
         <h1>Chat App</h1>
-
         <div id="messages" class="messages"></div>
-
         <div class="input-container">
             <input type="text" id="message" placeholder="Enter Message">
             <button id="sendBtn">Send</button>
         </div>
     </div>
-
     <script src="/socket.io/socket.io.js"></script>
     <script>
-        const socket = io();
+        const socket = io(window.location.origin);
         const sendBtn = document.getElementById('sendBtn');
         const messageInput = document.getElementById('message');
         const allMessages = document.getElementById('messages');
